<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">安卓Painter</string>
    <string name="app_tips">点击右上方菜单查看更多！</string>
    <string name="app_example">示例</string>
    <string name="action_settings">Settings</string>

    <string name="all_home">首页</string>
    <string name="all_explore">探索</string>
    <string name="all_apply">应用</string>
    <string name="all_more">更多</string>
    <string name="all_none">--</string>
    <string name="all_news_title">开发资讯</string>
    <string name="all_quotation_title">市场行情</string>

    <string name="nav_item_weather">天气</string>
    <string name="nav_item_reading">阅读</string>
    <string name="nav_item_setting">设置</string>
    <string name="nav_item_about">关于</string>
    <string name="nav_item_location">My Location</string>
    <string name="drawer_header_text">Drawer Header</string>


    <!--menu-->
    <string name="menu_search">Search</string>
    <string name="menu_canvas">Show Canvas</string>
    <string name="menu_Paint">Show Paint</string>
    <string name="menu_Path">Show Path</string>

    <!--canvas-->
    <string name="canvas_draw">常规绘制</string>
    <string name="canvas_paint">Paint详解</string>
    <string name="canvas_clip">范围裁切</string>
    <string name="canvas_matrix">矩阵变换</string>

    <!--clip-->
    <string name="clip_path">clipPath</string>
    <string name="clip_rect">clipRect</string>

    <!--探索：desc-->
    <string name="desc_common">常规绘制：将会介绍Canvas里的常用绘制方法。如绘制颜色，绘制常规的几何图形等。</string>
    <string name="desc_clip">范围裁切：将会介绍Canvas里的常用绘制方法。如绘制颜色，绘制常规的几何图形等。</string>
    <string name="desc_paint">Paint相关：将会介绍自定义View中Paint相关API。</string>

    <string name="normal_method">方法名：%1$s</string>
    <string name="normal_method_desc">作用：%1$s</string>

    <string name="drawArc_desc">Draw the special arc.</string>
    <string name="drawBitmap_desc">Draw the specified bitmap</string>
    <string name="drawColor_desc">Fill the entire canvas bitmap (restricted to the current clip)
        with the specified color, using srcover porterduff mode.</string>
    <string name="drawCircle_desc">Draw the specified circle using the specified paint.</string>
    <string name="drawLine_desc">Draw a line segment with the specified start and stop x,y coordinates,
        using the specified paint.</string>
    <string name="drawBitmapMesh_desc">Draw the bitmap through the mesh, where mesh vertices are evenly
        distributed across the bitmap.</string>
    <string name="drawOval_desc">Draw the specified oval using the specified paint.</string>
    <string name="drawPath_desc">Draw the specified path using the specified paint.</string>
    <string name="drawPoint_desc">Helper for drawPoints() for drawing a single point.</string>
    <string name="drawPaint_desc">Fill the entire canvas bitmap (restricted to the current clip) with
        the specified paint.</string>
    <string name="drawPoints_desc">Helper for drawPoints() that assumes you want to draw the entire array</string>
    <string name="drawRect_desc">Draw the specified Rect using the specified paint.</string>
    <string name="drawRGB_desc">Fill the entire canvas bitmap (restricted to the current clip) with the
        specified RGB color, using srcover porterduff mode.</string>
    <string name="drawRoundRect_desc">Draw the specified round-rect using the specified paint.</string>
    <string name="drawText_desc">Preconcat the current matrix with the specified translation</string>
    <string name="drawTextOnPath_desc">Draw the text, with origin at (x,y), using the specified paint,
        along the specified path.</string>
    <string name="drawTextRun_desc">Draw a run of text, all in a single direction, with optional
        context for complex text shaping.</string>
    <string name="drawVertices_desc"></string>

    <!--启动页-->
    <string name="count_tips">跳过</string>
    <string name="splash_change">换一换</string>
    <string name="market_riskindex">估值风险指数</string>

    <!--资讯-->
    <string name="news_type">类型：%1$s</string>
    <string name="news_publish_time">发布日期：%1$s</string>
    <string name="news_linked">链接：</string>
    <string name="news_author">作者：%1$s</string>

    <!--行情-->
    <string name="quote_all_index_name">指数</string>
    <string name="quote_all_highs_lows">涨跌</string>
    <string name="quote_all_volume">成交量</string>
    <string name="quote_all_increase_amount">涨幅</string>
    <string name="quote_all_turn_volume">成交额</string>
    <string name="quote_all_last">最新</string>

    <!--设置页面-->
    <string name="setting_title">设置</string>


</resources>
