<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLightGray"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <RadioGroup
        android:id="@+id/rg_tab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="horizontal">
        <!--首页-->
        <RadioButton
            android:id="@+id/rb_home"
            style="@style/BottomNavigationStyle"
            android:checked="true"
            android:drawableTop="@drawable/selector_home"
            android:text="@string/all_home" />

        <!--探索-->
        <RadioButton
            android:id="@+id/rb_explore"
            style="@style/BottomNavigationStyle"
            android:drawableTop="@drawable/selector_explore"
            android:text="@string/all_explore" />

        <!--应用-->
        <RadioButton
            android:id="@+id/rb_apply"
            style="@style/BottomNavigationStyle"
            android:drawableTop="@drawable/selector_apply"
            android:text="@string/all_apply" />

        <RadioButton
            android:id="@+id/rb_more"
            style="@style/BottomNavigationStyle"
            android:drawableTop="@drawable/selector_more"
            android:text="@string/all_more" />
    </RadioGroup>

</LinearLayout>
