<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    app:cardBackgroundColor="@android:color/white"
    app:cardCornerRadius="2dp"
    app:cardElevation="2dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/dp_8">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!--Title-->
            <TextView
                android:id="@+id/tv_news_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_weight="1"
                android:ellipsize="end"
                android:maxLines="3"
                android:paddingTop="@dimen/dp_4"
                android:textColor="@android:color/black"
                android:textSize="@dimen/textsize_16sp"
                tools:text="Title" />

            <ImageView
                android:id="@+id/iv_pic"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/dp_12"
                android:layout_marginRight="@dimen/dp_16"
                android:scaleType="fitXY"
                android:src="@drawable/ic_drawer"
                tools:ignore="RtlHardcoded" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_4">

            <ImageView
                android:id="@+id/iv_news_type"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:scaleType="fitXY"
                android:src="@drawable/icon_arc"
                android:text="@string/news_type" />

            <!--作者-->
            <TextView
                android:id="@+id/tv_news_author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/dp_6"
                android:layout_toRightOf="@+id/iv_news_type"
                android:ellipsize="end"
                android:lines="1"
                android:textSize="@dimen/textsize_12sp"
                tools:text="@string/news_author" />

            <TextView
                android:id="@+id/tv_news_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/dp_8"
                android:text="@string/news_publish_time"
                android:textSize="@dimen/textsize_12sp"
                tools:ignore="RtlHardcoded" />
        </RelativeLayout>

    </LinearLayout>


</android.support.v7.widget.CardView>